core/roboconf-core/src/test/resources/configurations/invalid/duplicate-facet.graph
component A {
	installer: whatever;
	facets: fA;
}

component B {
	installer: B;
	facets: fB;
}

facet fA {
	# nothing
}

facet fB {
	# nothing
}

facet fA {
	exports: ip;
}

facet fA {
	# nothing
}
